--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="assets/project-management.png">
     <title>React App</title>
   </head>
   <body>
